--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ content.message2=入力された値は 「
 content.message3=」 です。
 content.message4=前回
 content.message5=」 でした。
+content.message6=送信
+content.message7=入力画面へ戻る
